k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wacopro-production
  labels:
    app.kubernetes.io/managed-by: argocd
    istio-injection: enabled
    environment: production
