k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wacopro-backend
  namespace: wacopro-production
  labels:
    app: wacopro-backend
  annotations:
    prometheus.io/scrape: "true"
spec:
  selector:
    app: wacopro-backend
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
